# ENISI-Dependencies

./: CMakeLists.txt  README.mkd  project_copasi-install.sh  project_copasi_deps-install.sh  project_repast-install.sh  project_repast.cmake
patches/: install.sh.patch
